Hero block visibility issue fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -235,7 +235,6 @@ hr {
 
 .content-button-wrapper {
   display: flex;
-  display: none;
   flex-direction: column;
   align-items: flex-start;
   gap: 40px;
